@startuml Modul_F_Pembayaran_Piutang

' Pengaturan visual agar profesional dan fungsional
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 14
skinparam titleFontSize 20

title Pembayaran Piutang

    class Debt {
        - id: Integer
        - saleId: Integer
        - customerId: Integer
        - originalAmount: Decimal
        - remainingAmount: Decimal
        - status: DebtStatus
        - isActive: Boolean
        - createdAt: DateTime
        + makePayment(amount: Decimal, note: String): DebtPayment
        + autoPayFromSurplus(surplus: Decimal): Decimal
        + checkPaidStatus(): Boolean
        + getRemainingLiability(): Decimal
        + deactivate(): void
    }

    class DebtPayment {
        - id: Integer
        - debtId: Integer
        - amountPaid: Decimal
        - paymentDate: DateTime
        - note: String
        + getPaymentReceipt(): String
    }

    enum DebtStatus {
        UNPAID
        PARTIAL
        PAID
        CANCELLED
    }

    ' Relationships
    Debt "1" *-- "0..*" DebtPayment : has history >
    Debt ..> DebtStatus : has status >
    Debt "0..*" -- "1" Customer : liability of >
    Debt "1" -- "1" Sale : originates from >

    class Sale <<external>> {
        - id: Integer
        - invoiceNumber: String
    }
    class Customer <<external>> {
        - id: Integer
        - name: String
    }

@enduml
